# mounties-activity-publisher

./: .gcloudignore  .gitignore  ARCHITECTURE.txt  COST.md  ENVIRONMENTS.md  OPERATIONS.md  PHASE2_README.md  PHASE3_README.md  PHASE4_README.md  PHASE5_README.md  README.md  architecture.puml  deploy.sh  fix-permissions.sh  issue8.txt  issue9.txt  main.py  pyproject.toml  queues.yaml  requirements.txt  sample_activity_detail.html  spec.md
.claude/commands/: check-docs.md
infrastructure/: Pulumi.prod.yaml  Pulumi.yaml  __main__.py  requirements.txt
src/: __init__.py  config.py  discord_client.py  http_client.py  models.py
src/db/: __init__.py  activities.py  bookkeeping.py  firestore_client.py  leaders.py  places.py
src/functions/: __init__.py  catchup.py  drain_queues.py  pause_processing.py  publisher.py  resume_processing.py  scraper.py  searcher.py
src/parsers/: __init__.py  detail_parser.py  helpers.py  listing_parser.py  search_parser.py
src/tasks/: __init__.py  client.py
tests/: __init__.py  reproduce_issue_9.py  test_catchup.py  test_detail_parser.py  test_firestore_operations.py  test_functions.py  test_http_client.py  test_issue_20.py  test_listing_parser.py  test_publisher.py  test_search_parser.py  test_transactional.py
tests/fixtures/: sample_activity_search_response.html  sample_activity_search_response_1.html  sample_faceted_query_response.html
